# nova

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci.yml  meta-labeler.yml  meta-sync-labels.yml  release.yml
docs/: development_plan.md
docs/adr/: 0001-map-generation-system.md  0002-visualization-system.md
src/: main.rs
src/cli/: args.rs
src/config/: mod.rs  session.rs
src/simulation/: entities.rs  map.rs  mod.rs  tests.rs  visualization.rs
src/simulation/robot_ai/: behavior.rs  mod.rs  pathfinding.rs  types.rs  utils.rs
src/simulation/robot_ai/behaviors/: explorer.rs  harvester.rs  mod.rs  scientist.rs
