[package]
name = "nova"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.38"
colored = "3.0.0"
crossterm = "0.28"
env_logger = "0.11.8"
log = "0.4.27"
noise = "0.9.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
ratatui = "0.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
